# Dict_K2H

./: .gitignore  LICENSE  README.md  dict_k2h.py  generate_lsd_j2j.py  pyproject.toml  requirements.txt
examples/: input_sample.tsv  output_readings.tsv  output_review.tsv  output_sample.plist  overrides_sample.tsv
