[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dict-k2h"
version = "0.1.0"
description = "Generate Apple text-replacement plist entries from Japanese dictionary terms to hiragana shortcuts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jaconv==0.5.0",
  "pykakasi==2.3.0",
  "SudachiPy==0.6.11",
  "SudachiDict-full==20260428",
]

[project.scripts]
dict-k2h = "dict_k2h:main"

[tool.setuptools]
py-modules = ["dict_k2h"]
